# picunic

./: .gitignore  CHAT_TRANSCRIPT.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  WASM_BUILD.md  build-wasm.sh  merge_onnx_data.py  out
assets/: encoder.chars.json  encoder.onnx  encoder.onnx.data
docs/: CHAT_TRANSCRIPT.md
src/: bigfont.rs  bigfoont.rs  chunk.rs  dither.rs  embedding.rs  lib.rs  main.rs  wasm.rs
training/: charset.py  dataset.py  discover_distinct.py  export.py  model.py  requirements.txt  train.py
training/checkpoints/: best.pt
www/: index.html  main.js  package.json  style.css
www/assets/: encoder.chars.json  encoder.onnx
