[package]
name = "picunic"
version = "0.1.0"
edition = "2021"
description = "Image to Unicode converter using CNN embeddings"
license = "MIT"

[lib]
name = "picunic"
path = "src/lib.rs"

[[bin]]
name = "picunic"
path = "src/main.rs"

[[bin]]
name = "bigfoont"
path = "src/bigfoont.rs"

[dependencies]
image = "0.25"
fontdue = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
rayon = "1.10"
ort = "2.0.0-rc.10"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
