[package]
name = "picunic"
version = "0.1.0"
edition = "2021"
description = "Image to Unicode converter using CNN embeddings"
license = "MIT"

[lib]
name = "picunic"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[[bin]]
name = "picunic"
path = "src/main.rs"

[[bin]]
name = "bigfoont"
path = "src/bigfoont.rs"

[dependencies]
image = "0.25"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native-only dependencies (not available for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fontdue = "0.9"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
ort = "2.0.0-rc.10"
ndarray = "0.16"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
